--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,15 @@
         <artifactId>json-schema-validator</artifactId>
         <version>2.8.0</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20190722</version>
+    </dependency>
+
+
 </dependencies>
 
 </project>
