--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
         <version>20190722</version>
     </dependency>
 
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.4.0</version>
+    </dependency>
+
 
 </dependencies>
 
