--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,17 @@
         <version>5.4.0</version>
     </dependency>
 
-
 </dependencies>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M3</version>
+            </plugin>
+        </plugins>
+    </reporting>
+
 
 </project>
