--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
         <version>5.4.0</version>
     </dependency>
 
+    <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>3.0.0-M3</version>
+        <type>maven-plugin</type>
+    </dependency>
+
 </dependencies>
 
     <reporting>
@@ -66,6 +73,5 @@
             </plugin>
         </plugins>
     </reporting>
-
 
 </project>
