--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,7 @@ jobs:
 
       # run tests!
       - run: mvn integration-test
+      - run: mvn clean
+      - run: mvn compile
+      - run: mvn install
       - run: mvn site
