--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,25 @@
     <groupId>APITesting</groupId>
     <artifactId>BackendTask</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.7.1</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
+
+        </plugins>
+    </build>
+
 <dependencies>
     <!-- https://mvnrepository.com/artifact/junit/junit -->
     <dependency>
